--- a/page3.html
+++ b/page3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>قاموس الأطفال</title>
+  <title>معجم المفردات</title>
   <style>
     body { font-family: Arial; text-align: center; padding: 20px; direction: rtl; }
     input { padding: 10px; width: 200px; margin-bottom: 10px; }
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <h1>قاموس الأطفال</h1>
+  <h1>معجم المفردات</h1>
   <input type="text" id="search" placeholder="اكتب الكلمة..." oninput="searchWord()" />
 
   <div id="result" class="card" style="display:none;">
